--- a/YoutubeDownloader/downloader/templates/index.html
+++ b/YoutubeDownloader/downloader/templates/index.html
@@ -188,8 +188,8 @@ text-align:justify;
       </div>
         <div id="bar">
             <ul>
-                <li>Home</li>
-                <li>Pictures</li>
+                <li>Title : {{video_title}}</li>
+                <li>length: {{video_length}}</li>
                 <li>My Bio</li>
                 <li>My Company</li>
                 <li>Portfolio</li>
